<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".login.LoginFragment">

    <data>
        <variable
            name="loginViewModel"
            type="com.walidkh.android.myfavcars.login.LoginViewModel" />
    </data>

    <!-- use of constraint layout to arrange the views with constrains -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_background">


        <TextView
            android:id="@+id/loginTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="16dp"
            android:text="@string/login_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="16dp"
            android:text="@={loginViewModel.user.userName}"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="@+id/labelUserNameId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/labelUserNameId"
            app:layout_constraintTop_toTopOf="@+id/labelUserNameId" />

        <TextView
            android:id="@+id/labelUserNameId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:text="@string/label_username"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelPwdId"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="40dp"
            android:text="@string/label_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/labelUserNameId" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="40dp"
            android:padding="4dp"
            android:text="@string/btn_signin"
            app:layout_constraintEnd_toStartOf="@+id/btnSignUp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:onClick="@{() ->loginViewModel.navigateToCarsList()}"/>

        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FF0000"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/btn_signup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btnSignIn"
            app:layout_constraintTop_toBottomOf="@+id/editTextPassword"
            android:onClick="@{() ->loginViewModel.navigateToWelcomePage()}"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:textCursorDrawable="@drawable/cursor_color"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:text="@={loginViewModel.user.password}"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="@+id/labelPwdId"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/editTextUsername"
            app:layout_constraintTop_toTopOf="@+id/labelPwdId"
            app:layout_constraintVertical_bias="0.461" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
